LOG Updated to 0.5.1 (by updates_builder)

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  pylibacl-0.5.0.tar.gz: cdd531494ebc226e718a8bc8bd9eb4cf4bffee08
 sources:
-  "pylibacl-0.5.0.tar.gz": cdd531494ebc226e718a8bc8bd9eb4cf4bffee08
+  pylibacl-0.5.1.tar.gz: 3dbaade48bc5e217b7e88d762ec739af63b94827
